--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,8 @@
     <string name="not_need_text">Não precisa</string>
     <string name="content_description_image_captured">Imagem Capturada</string>
     <string name="content_description_switch_camera">Trocar a camera</string>
+    <string name="button_copy_clipboard">Copiar Texto</string>
+    <string name="button_share_content">Compartilhar Texto</string>
+    <string name="success_copy_info">Texto copiado!</string>
+    <string name="label_analyzed_text_field">Texto capturado da imagem</string>
 </resources>
