generate txt and pdf files

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,7 @@
 
     <!--TOOLBAR-->
     <string name="title_preview">Imagens Capturadas</string>
+    <string name="menu_save_pdf">PDF</string>
+    <string name="menu_save_docx">Docx</string>
+    <string name="menu_save_txt">txt</string>
 </resources>
