add feature to save PDF and the option to open the saved file

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,8 @@
     <string name="button_crop_image">Crop Image</string>
     <string name="button_analyzer_image">Analyzer Image</string>
     <string name="content_description_take_photo">Tirar Foto</string>
+    <string name="snackbar_file_saved">Gostaria de visualizar o arquivo salvo?</string>
+    <string name="snackbar_open_action">Abrir</string>
 
     <!--TOOLBAR-->
     <string name="title_preview">Imagens Capturadas</string>
