fix:  the bug with the camera lifecycle that when the user return to the camera screen the camera control miss the instance (resolve using the CameraController interface);
 refactors:
  Refactor the analyzer package, update the viewModel and screen;
  Update Utils to add the error callback;
  change versionName
  etc...

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,6 @@
 
 
     <string name="camera_screen_document">Scan \nDocuments</string>
+    <string name="error_something_went_wrong">Something went wrong! %s</string>
+    <string name="error_cant_open_scanner">We cannot open the Scanner, please, update your Play Store and try again</string>
 </resources>
