--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,5 +24,6 @@
 
     <string name="camera_screen_document">Scan \nDocuments</string>
     <string name="error_something_went_wrong">Something went wrong! %s</string>
+    <string name="error_save_file">Do not possible to save the File</string>
     <string name="error_cant_open_scanner">We cannot open the Scanner, please, update your Play Store and try again</string>
 </resources>
