--- a/app/src/main/res/values-es-rES/strings.xml
+++ b/app/src/main/res/values-es-rES/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Text Scan</string>
+    <string name="app_name">Image Text Converter</string>
     <string name="crop_dialog_title">¿Desea recortar la imagen?</string>
     <string name="crop_dialog_confirm">Recortar</string>
     <string name="not_need_text">No es necesario</string>
@@ -17,6 +17,7 @@
     <string name="analyzed_image_output_header">%s *** Imagen %d *** \n\n%s\n\n</string>
 
     <string name="title_preview">Imágenes capturadas</string>
+    <string name="gallery">Galería</string>
     <string name="menu_save_pdf">PDF</string>
     <string name="menu_save_docx">Docx</string>
     <string name="menu_save_txt">txt</string>
