--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Text Scan</string>
+    <string name="app_name">Image Text Converter</string>
     <string name="crop_dialog_title">Gostaria de Ajustar o tamanho da imagem?</string>
     <string name="crop_dialog_confirm">Ajustar</string>
     <string name="not_need_text">Não precisa</string>
@@ -18,6 +18,7 @@
 
     <!--TOOLBAR-->
     <string name="title_preview">Imagens Capturadas</string>
+    <string name="gallery">Galeria</string>
     <string name="menu_save_pdf">PDF</string>
     <string name="menu_save_docx">Docx</string>
     <string name="menu_save_txt">txt</string>
